--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.6",
-    "web-vitals": "^2.1.4",
-    "homepage": "https://codebyjet.github.io/work-timer"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
