--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-slider": "^2.0.6",
     "web-vitals": "^2.1.4"
@@ -19,6 +20,7 @@
     "@babel/plugin-proposal-numeric-separator": "7.18.6",
     "@babel/plugin-proposal-optional-chaining": "7.21.0",
     "@babel/plugin-proposal-private-methods": "7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "7.18.6",
     "gh-pages": "^6.1.1"
   },
   "scripts": {
